src/view/styles/gameSection.css
.gsContainer {
  width: 98%;
  height: 1200px;
  margin: auto;
  display: flex;
  flex-direction: column;
}

.infoContainer {
  width: 10%;
  padding-top: 10px;
  margin-left: auto;
  margin-right: 0;
}

.newtopbar {
  width: 95%;
  margin: auto;

  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
}

.gameProgressContainer {
  width: 85%;
  margin-left: auto;
  margin-right: auto;
  height: 35px;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  padding-bottom: 30px;
}

.setTitle {
  width: 25%;
  text-align: center;
  font-size: larger;
  font-style: oblique;
}

.setProgress {
  width: 75%;
}

.cardPickerContainer {
  width: 100%;
  min-height: 970px;
  margin-left: auto;
  margin-right: auto;
  background-color: whitesmoke;
}

.pickedViewer {
  width: 100%;
  min-height: 800px;
  margin-left: auto;
  margin-right: auto;
  background-color: whitesmoke;
}

.modeOption {
  width: 100%;
  height: 50px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}

